--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "Jesse Luoto",
   "license": "MIT",
   "devDependencies": {
+    "express": "^4.13.3",
     "grunt": "^0.4.5",
     "grunt-cli": "^0.1.13",
     "grunt-contrib-clean": "^0.7.0",
@@ -23,6 +24,7 @@
     "grunt-contrib-jshint": "^0.11.3",
     "grunt-contrib-uglify": "^0.11.0",
     "grunt-contrib-watch": "^0.6.1",
+    "grunt-express": "^1.4.1",
     "grunt-jscs": "^2.3.0"
   }
 }
