--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "grunt-contrib-uglify": "^0.11.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-express": "^1.4.1",
-    "grunt-jscs": "^2.3.0"
+    "grunt-jscs": "^2.3.0",
+    "grunt-parallel": "^0.4.1"
   }
 }
