--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Small, cacheable subset of Google Analytics JS client",
   "main": " ",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified but that's ok\""
   },
   "keywords": [
     "google",
