--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": " ",
   "scripts": {
     "test": "echo \"Error: no test specified but that's ok\"",
-    "build": "grunt build",
+    "build": "webpack",
     "release": "./do_release.sh"
   },
   "keywords": [
@@ -18,6 +18,7 @@
   "author": "Jesse Luoto",
   "license": "MIT",
   "devDependencies": {
-    "express": "^4.13.3"
+    "express": "^4.13.3",
+    "webpack": "^3.4.1"
   }
 }
