--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Small, cacheable subset of Google Analytics JS client",
   "main": " ",
   "scripts": {
-    "test": "echo \"Error: no test specified but that's ok\"",
+    "test": "mocha test/**/*.js",
     "build": "webpack",
     "release": "./do_release.sh",
     "lint": "eslint ./src/**/*.js ./test/**/*.js"
@@ -19,6 +19,7 @@
   "author": "Jesse Luoto",
   "license": "MIT",
   "devDependencies": {
+    "chai": "^4.1.0",
     "eslint": "^4.3.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-plugin-import": "^2.7.0",
@@ -26,6 +27,7 @@
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^3.0.1",
     "express": "^4.13.3",
+    "mocha": "^3.4.2",
     "webpack": "^3.4.1"
   }
 }
