--- a/.travis.yml
+++ b/.travis.yml
@@ -10,3 +10,14 @@ deploy:
   on:
     tags: true
     repo: jehna/ga-lite
+
+# https://github.com/laverdet/node-fibers/issues/331#issuecomment-274826954
+env:
+  - CXX=g++-4.8
+
+addons:
+    apt:
+      sources:
+        - ubuntu-toolchain-r-test
+      packages:
+        - g++-4.8
