--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ga-lite",
   "version": "1.1.2",
   "description": "Small, cacheable subset of Google Analytics JS client",
+  "jsdelivr": "dist/ga-lite.min.js",
   "main": " ",
   "scripts": {
     "test": "echo \"Error: no test specified but that's ok\"",
