--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": " ",
   "scripts": {
     "test:browser": "wdio test/browser-tests/wdio.conf.js",
-    "test:unit": "mocha-webpack test/unit-tests/**/*.js",
+    "test:unit": "mocha-webpack --webpack-config webpack.config-test.babel.js test/unit-tests/**/*.js",
     "test": "npm run test:browser && npm run test:unit",
     "build": "webpack",
     "release": "./do_release.sh",
@@ -23,6 +23,7 @@
   "devDependencies": {
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "^6.24.1",
     "chai": "^4.1.0",
