--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test:browser": "wdio test/browser-tests/wdio.conf.js",
     "test:unit": "mocha-webpack --webpack-config webpack.config-test.babel.js test/unit-tests/**/*.js",
     "test": "npm run test:browser && npm run test:unit",
+    "cover": "NODE_ENV=coverage nyc --reporter=text-lcov npm run test:unit | ./node_modules/coveralls/bin/coveralls.js",
     "build": "webpack",
     "release": "./do_release.sh",
     "lint": "eslint ./src/**/*.js ./test/**/*.js",
@@ -29,6 +30,7 @@
     "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "^6.24.1",
     "chai": "^4.1.0",
+    "coveralls": "^3.0.0",
     "eslint": "^4.3.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-plugin-import": "^2.7.0",
@@ -36,8 +38,11 @@
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^3.0.1",
     "express": "^4.13.3",
+    "istanbul-instrumenter-loader": "^3.0.0",
     "mocha": "^3.4.2",
+    "mocha-lcov-reporter": "^1.3.0",
     "mocha-webpack": "^0.7.0",
+    "nyc": "^11.2.1",
     "uglify-js": "^3.1.2",
     "url": "^0.11.0",
     "wdio-mocha-framework": "^0.5.10",
@@ -45,6 +50,14 @@
     "wdio-spec-reporter": "^0.1.0",
     "wdio-webpack-service": "^1.0.1",
     "webdriverio": "^4.8.0",
-    "webpack": "^3.4.1"
+    "webpack": "^3.4.1",
+    "webpack-node-externals": "^1.6.0"
+  },
+  "nyc": {
+    "include": [
+      "src/**/*.js"
+    ],
+    "instrument": false,
+    "sourceMap": false
   }
 }
