--- a/package.json
+++ b/package.json
@@ -35,6 +35,10 @@
     "eslint": "^6.2.1",
     "eslint-config-prettier": "^6.1.0",
     "eslint-config-standard": "^14.0.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-node": "^9.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
     "jest": "^24.9.0",
     "prettier": "^1.18.2",
     "uglify-js": "^3.6.0",
