Fix actions naming

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,8 +4,8 @@ on:
     tags:
       - "*"
 jobs:
-  lint:
-    name: Run tests
+  test:
+    name: Run tests and deploy
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
