--- a/.npmignore
+++ b/.npmignore
@@ -1,8 +1,5 @@
-node_modules
-Gruntfile.js
-do_release.sh
-yarn.lock
-.travis.yml
-.git
-.gitignore
-.jscsrc
+*
+!README.md
+!LICENSE
+!dist/*
+!src/*
